<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:animateLayoutChanges="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/slovensko_sk_logo_white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="8dp"
                android:textColor="@color/textDark"
                android:textSize="15sp"
                android:text="@string/settings__environment"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/stroke"
                />

            <RadioGroup
                android:id="@+id/rg_environment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_12"
                >

                <RadioButton
                    android:id="@+id/rb_minv_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4"
                    android:paddingStart="@dimen/margin_8"
                    android:paddingEnd="@dimen/margin_8"
                    android:textColor="@color/black"
                    android:text="@string/settings__minv_test"
                    />

                <RadioButton
                    android:id="@+id/rb_minv_prod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4"
                    android:paddingStart="@dimen/margin_8"
                    android:paddingEnd="@dimen/margin_8"
                    android:textColor="@color/black"
                    android:text="@string/settings__minv_prod"
                    />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/stroke"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="8dp"
                android:textColor="@color/textDark"
                android:textSize="15sp"
                android:text="@string/settings__language"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/stroke"
                />

            <RadioGroup
                android:id="@+id/rg_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_12"
                >

                <RadioButton
                    android:id="@+id/rb_system"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4"
                    android:paddingStart="@dimen/margin_8"
                    android:paddingEnd="@dimen/margin_8"
                    android:textColor="@color/black"
                    android:text="@string/settings__system"
                    />

                <RadioButton
                    android:id="@+id/rb_slovak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4"
                    android:paddingStart="@dimen/margin_8"
                    android:paddingEnd="@dimen/margin_8"
                    android:textColor="@color/black"
                    android:text="@string/settings__sk"
                    />

                <RadioButton
                    android:id="@+id/rb_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4"
                    android:paddingStart="@dimen/margin_8"
                    android:paddingEnd="@dimen/margin_8"
                    android:textColor="@color/black"
                    android:text="@string/settings__en"
                    />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/stroke"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="8dp"
                android:textColor="@color/textDark"
                android:textSize="15sp"
                android:text="@string/settings__auth_flow"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/stroke"
                />

            <RadioGroup
                android:id="@+id/rg_auth_flow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_12"
                >

                <RadioButton
                    android:id="@+id/rb_auth_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4"
                    android:paddingStart="@dimen/margin_8"
                    android:paddingEnd="@dimen/margin_8"
                    android:textColor="@color/black"
                    android:text="@string/settings__auth_code"
                    />

                <RadioButton
                    android:id="@+id/rb_implicit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4"
                    android:paddingStart="@dimen/margin_8"
                    android:paddingEnd="@dimen/margin_8"
                    android:textColor="@color/black"
                    android:text="@string/settings__implicit"
                    android:checked="true"
                    />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/stroke"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="8dp"
                android:textColor="@color/textDark"
                android:textSize="15sp"
                android:text="@string/settings__tutorial"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/stroke"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset_tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_32"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/settings__reset_tutorial"
                android:textSize="14sp"
                app:backgroundTint="@color/red"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>