<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="42dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/slovensko_sk_logo_white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintBottom_toTopOf="@+id/footer_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32"
                android:textStyle="bold"
                tools:text="ustredny portal verejnej spravy"
                />

            <View
                android:id="@+id/separator"
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_8"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/txt_user_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                android:text="Prihlásený používateľ:"
                android:visibility="invisible"
                tools:visibility="visible"
                />

            <TextView
                android:id="@+id/txt_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:textColor="@color/black"
                android:visibility="invisible"
                tools:visibility="visible"
                tools:text="XC123456"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginEnd="46dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="14sp"
                android:text="@string/main__log_in"
                app:icon="@drawable/ic_log_in"
                app:iconGravity="textStart"
                app:iconPadding="16dp"
                app:backgroundTint="@color/red"
                app:elevation="20dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginEnd="46dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="14sp"
                android:text="@string/main__log_out"
                android:visibility="gone"
                app:icon="@drawable/ic_log_in"
                app:iconGravity="textStart"
                app:iconPadding="16dp"
                app:backgroundTint="@color/blue"
                app:elevation="20dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_read_qr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginStart="46dp"
                android:layout_marginEnd="46dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="14sp"
                android:text="@string/main__qr_scanner"
                app:icon="@drawable/ic_qr_code_scanner"
                app:iconGravity="textStart"
                app:iconPadding="16dp"
                app:backgroundTint="@color/red"
                app:elevation="20dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_certificates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginStart="46dp"
                android:layout_marginEnd="46dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="14sp"
                android:text="@string/main__certificates"
                app:icon="@drawable/ic_certificate"
                app:iconGravity="textStart"
                app:iconPadding="16dp"
                app:backgroundTint="@color/red"
                app:elevation="20dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginStart="46dp"
                android:layout_marginEnd="46dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="14sp"
                android:text="@string/main__sign_form"
                app:backgroundTint="@color/red"
                app:icon="@drawable/ic_sign"
                app:iconGravity="textStart"
                app:iconPadding="16dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_decrypt_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginStart="46dp"
                android:layout_marginEnd="46dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="14sp"
                android:text="@string/main__decrypt_data"
                app:backgroundTint="@color/red"
                app:icon="@drawable/ic_refresh"
                app:iconGravity="textStart"
                app:iconPadding="16dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pin_management"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginStart="46dp"
                android:layout_marginEnd="46dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/main__pin_management"
                android:textSize="14sp"
                app:backgroundTint="@color/red"
                app:icon="@drawable/ic_log_in"
                app:iconGravity="textStart"
                app:iconPadding="16dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginStart="46dp"
                android:layout_marginEnd="46dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/main__tutorial"
                android:textSize="14sp"
                app:backgroundTint="@color/red"
                app:icon="@drawable/ic_help"
                app:iconGravity="textStart"
                app:iconPadding="16dp"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"
                />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_16"
            android:enabled="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="eID - 1.3.4"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_language_sk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_16"
                android:textColor="@color/selector_text"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/main__sk"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_marginBottom="@dimen/margin_12"
                android:background="@color/white"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_language_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_16"
                android:textColor="@color/selector_text"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/main__en"
                />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_reset_tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_16"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/main__reset_tutorial"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>